# software-grimoire

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  _quarto.yml  book_structure.json  index.html  index.qmd  porting-status.html  porting-status.qmd  preface.html  preface.qmd  pyproject.toml  quick_start.html  quick_start.qmd  reader_path.html  reader_path.qmd  robots.txt  search.json  sitemap.xml
.github/: pull_request_template.md
adoption/: evidence.html  evidence.qmd  external-walkthrough.html  external-walkthrough.qmd  index.html  index.qmd  installable-library.html  installable-library.qmd  playbook.html  playbook.qmd
assets/: styles.scss
chapters/: 01-operative-language.html  01-operative-language.qmd  02-what-a-spell-is.html  02-what-a-spell-is.qmd  03-crafting-spells.html  03-crafting-spells.qmd  04-sigils-canonicalization-and-seals.html  04-sigils-canonicalization-and-seals.qmd  05-coil-inspection.html  05-coil-inspection.qmd  06-field-spells.html  06-field-spells.qmd  07-public-canon.html  07-public-canon.qmd  08-stackcraft.html  08-stackcraft.qmd  09-tooling-and-formalization.html  09-tooling-and-formalization.qmd  10-living-practice.html  10-living-practice.qmd  11-adversarial-promptcraft.html  11-adversarial-promptcraft.qmd
data/: adoption_evidence.json  adversarial_harness.json  bench_v2.json  canon_audit.json  canon_quality.json  canon_review_queue.json  evidence_index.json  evidence_taxonomy.json  execution_bench.json  generator_architecture.json  houses.json  jailbreak_resilience.json  lexicon.json  logical_conclusion_status.json  major_arcana.json  pocket_runes.json  rune_usage_graph.json  seals.json  semantic_promotion.json  spells.json  stacks.json  visual_practice.json
exports/: README.md  checksums.sha256  library-manifest.json
prompts/: README.md
reference/: adversarial-harness.html  adversarial-harness.qmd  bench-v2.html  bench-v2.qmd  calibration.html  calibration.qmd  canon-audit.html  canon-audit.qmd  canon-map.html  canon-map.qmd  canon-review-queue.html  canon-review-queue.qmd  cast-levels.html  cast-levels.qmd  evidence-browser.html  evidence-browser.qmd  execution-bench.html  execution-bench.qmd  failure-modes.html  failure-modes.qmd  generator-architecture.html  generator-architecture.qmd  hardness-v4.html  hardness-v4.qmd  house-architecture-abstraction-and-design.html  house-architecture-abstraction-and-design.qmd  house-build-tooling-versioning-and-release.html  house-build-tooling-versioning-and-release.qmd  house-compound-forms-prefixes-suffixes-and-naming-runes.html  house-compound-forms-prefixes-suffixes-and-naming-runes.qmd  house-control-flow-coordination-and-temporal-logic.html  house-control-flow-coordination-and-temporal-logic.qmd  house-data-state-and-representation.html  house-data-state-and-representation.qmd  house-databases-persistence-and-time-binding-words.html  house-databases-persistence-and-time-binding-words.qmd  house-failure-words-pathologies-and-counter-spells.html  house-failure-words-pathologies-and-counter-spells.qmd  house-guarantee-words-quality-attributes-and-behavioral-adjectives.html  house-guarantee-words-quality-attributes-and-behavioral-adjectives.qmd  (+68 more)
schemas/: adoption-evidence.schema.json  adoption-intake-decision.schema.json  adoption-report.schema.json  adversarial-harness.schema.json  bench-v2.schema.json  canon-audit-decision.schema.json  canon-audit.schema.json  canon-quality.schema.json  canon-review-queue.schema.json  evidence-index.schema.json  evidence-taxonomy.schema.json  execution-bench.schema.json  generator-architecture.schema.json  hardness-intake-decision.schema.json  hardness-v4-import.schema.json  hardness-v4-model-results.schema.json  hardness-v4-results.schema.json  house.schema.json  jailbreak-case.schema.json  lexicon-entry.schema.json  library-manifest.schema.json  logical-conclusion-status.schema.json  model-execution-results.schema.json  package-check.schema.json  package-index-release-plan.schema.json  package-index-smoke.schema.json  public-smoke-check.schema.json  rune-usage-graph.schema.json  seal.schema.json  semantic-promotion.schema.json  spell.schema.json  stack.schema.json  surface-comparison.schema.json  visual-practice.schema.json  ward-science.schema.json  warded-ab.schema.json  warded-baseline.schema.json
scripts/: __init__.py  bootstrap_project.py  check_adoption_intake.py  check_canon_audit_decision.py  check_hardness_intake.py  check_package.py  check_package_index.py  check_package_publish_workflow.py  create_adoption_report.py  generate_seals.py  grimoire.py  import_hardness_model_run.py  install_assets.py  run_adversarial_harness.py  run_bench.py  run_evaluations.py  run_execution_bench.py  run_hardness_bench.py  run_hardness_model_surfaces.py  run_jailbreak_resilience.py  run_model_artifact_execution.py  run_warded_ab.py  smoke_public_site.py  surface_adapters.py  sync_scaffold.py  validate_data.py
source_docs/: pocket_grimoire_software_spellcraft_final.docx  software_magic_grimoire_v3_public_release.docx  software_spellcraft_addendum_on_stacked_spells.docx
source_extracts/: pocket_grimoire_software_spellcraft_final.md  software_magic_grimoire_v3_public_release.md  software_spellcraft_addendum_on_stacked_spells.md
spells/: api-design.html  api-design.qmd  bug-diagnosis-from-logs.html  index.html  (+12 more)
(+701 files in other folders)
