[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-grimoire"
version = "3.0.0"
description = "Operative vocabulary, prompt-spells, and stackcraft for AI-assisted software engineering."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Corben Sorenson"}
]
dependencies = [
  "jsonschema>=4.0",
  "pytest>=7.0"
]

[project.urls]
Homepage = "https://corbensorenson.github.io/software-grimoire/"
Repository = "https://github.com/corbensorenson/software-grimoire"
Issues = "https://github.com/corbensorenson/software-grimoire/issues"

[project.scripts]
grimoire = "grimoire:main"
grimoire-install-assets = "install_assets:main"
grimoire-run-bench = "run_bench:main"
grimoire-run-execution-bench = "run_execution_bench:main"
grimoire-run-adversarial-harness = "run_adversarial_harness:main"
grimoire-run-model-artifacts = "run_model_artifact_execution:main"
grimoire-run-warded-ab = "run_warded_ab:main"
grimoire-check-package = "check_package:main"
grimoire-smoke-public-site = "smoke_public_site:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = [
  "bootstrap_project",
  "generate_seals",
  "grimoire",
  "install_assets",
  "check_package",
  "run_adversarial_harness",
  "run_bench",
  "run_execution_bench",
  "run_evaluations",
  "run_jailbreak_resilience",
  "run_model_artifact_execution",
  "run_warded_ab",
  "smoke_public_site",
  "surface_adapters",
  "sync_scaffold",
  "validate_data"
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["grimoire_build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
