[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-grimoire"
version = "3.0.0"
description = "Operative vocabulary, prompt-spells, and stackcraft for AI-assisted software engineering."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Corben Sorenson"}
]
dependencies = [
  "jsonschema>=4.0",
  "pytest>=7.0"
]

[project.urls]
Homepage = "https://corbensorenson.github.io/software-grimoire/"
Repository = "https://github.com/corbensorenson/software-grimoire"
Issues = "https://github.com/corbensorenson/software-grimoire/issues"

[project.scripts]
grimoire = "grimoire:main"
grimoire-create-adoption-report = "create_adoption_report:main"
grimoire-check-adoption-intake = "check_adoption_intake:main"
grimoire-install-assets = "install_assets:main"
grimoire-check-package-publish-workflow = "check_package_publish_workflow:main"
grimoire-check-hardness-intake = "check_hardness_intake:main"
grimoire-run-bench = "run_bench:main"
grimoire-run-execution-bench = "run_execution_bench:main"
grimoire-run-hardness-bench = "run_hardness_bench:main"
grimoire-import-hardness-run = "import_hardness_model_run:main"
grimoire-run-adversarial-harness = "run_adversarial_harness:main"
grimoire-run-model-artifacts = "run_model_artifact_execution:main"
grimoire-run-warded-ab = "run_warded_ab:main"
grimoire-check-package = "check_package:main"
grimoire-check-package-index = "check_package_index:main"
grimoire-check-canon-decision = "check_canon_audit_decision:main"
grimoire-smoke-public-site = "smoke_public_site:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = [
  "bootstrap_project",
  "check_adoption_intake",
  "check_hardness_intake",
  "check_package_publish_workflow",
  "create_adoption_report",
  "generate_seals",
  "grimoire",
  "install_assets",
  "import_hardness_model_run",
  "check_package",
  "check_package_index",
  "check_canon_audit_decision",
  "run_adversarial_harness",
  "run_bench",
  "run_execution_bench",
  "run_evaluations",
  "run_hardness_bench",
  "run_hardness_model_surfaces",
  "run_jailbreak_resilience",
  "run_model_artifact_execution",
  "run_warded_ab",
  "smoke_public_site",
  "surface_adapters",
  "sync_scaffold",
  "validate_data"
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["grimoire_build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
